<resources>
    <string name="app_name" translatable="false">iTrash</string>
    <string name="login_button">Login</string>
    <string name="login_email" translatable="false">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_text">You don\'t have an account yet ?</string>
    <string name="login_register">Register</string>
    <string name="title_activity_main_avtivity">MainAvtivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Kowalski</string>
    <string name="nav_header_subtitle">user.kowalski@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="action_Authors">Authors</string>
    <string name="nav_calendar">Calendar</string>
    <string name="action_logout">Log out</string>
    <string name="nav_nearby_garbage_cans">Nearby garbage cans</string>
    <string name="nav_recycling">Recycling</string>
    <string name="nav_report_garbage">Report garbage</string>
    <string name="notification_harmonogram_name">Reminders</string>
    <string name="notification_harmonogram_description">Garbage collection reminders</string>
    <string name="reminder">Reminder</string>
    <string name="trash_type_zmieszane">Mixed</string>
    <string name="trash_type_tworzywa">Plastics</string>
    <string name="trash_type_papier">Paper</string>
    <string name="trash_type_szklo">Glass</string>
    <string name="trash_type_bio" translatable="false">Bio</string>
    <string name="trash_type_mycie_bio">Washing bio containers</string>
    <string name="trash_type_mycie_kom">Washing communal containers</string>
</resources>