<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.codeforgreen.itrash.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.github.codeforgreen.itrash.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar"/>
    <fragment
        android:id="@+id/nav_nearby_garbage_cans"
        android:name="com.github.codeforgreen.itrash.ui.garbage_cans.GarbageCansFragment"
        tools:layout="@layout/fragment_garbage_cans"
        android:label="@string/nav_nearby_garbage_cans"/>
    <fragment
        android:id="@+id/nav_recycling"
        android:name="com.github.codeforgreen.itrash.ui.recycling.RecyclingFragment"
        tools:layout="@layout/fragment_recycling"
        android:label="@string/nav_recycling"/>
    <fragment
        android:id="@+id/nav_report_garbage"
        android:name="com.github.codeforgreen.itrash.ui.report_garbage.ReportGarbageFragment"
        tools:layout="@layout/fragment_repot_garbage"
        android:label="@string/nav_report_garbage"/>
</navigation>